Add licensing warning when missing #812 (#813)