@@ -22,12 +22,12 @@ package com.xwiki.macros;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
 
 import javax.inject.Inject;
+import javax.inject.Provider;
 
-import org.xwiki.bridge.DocumentAccessBridge;
-import org.xwiki.extension.ExtensionId;
 import org.xwiki.model.reference.DocumentReference;
 import org.xwiki.model.reference.LocalDocumentReference;
 import org.xwiki.model.reference.WikiReference;
@@ -43,6 +43,11 @@ import org.xwiki.script.ScriptContextManager;
 import org.xwiki.stability.Unstable;
 import org.xwiki.wiki.descriptor.WikiDescriptorManager;
 
+import com.xpn.xwiki.XWikiContext;
+import com.xpn.xwiki.XWikiException;
+import com.xpn.xwiki.doc.XWikiDocument;
+import com.xwiki.licensing.LicensedExtensionManager;
+import com.xwiki.licensing.LicensedFeatureId;
 import com.xwiki.licensing.Licensor;
 
 /**
@@ -55,18 +60,30 @@ import com.xwiki.licensing.Licensor;
 @Unstable
 public abstract class AbstractProMacro<P> extends AbstractMacro<P>
 {
-    private static final ExtensionId PRO_MACROS_EXT_ID = new ExtensionId("com.xwiki.pro:xwiki-pro-macros");
+    private static final String PRO_MACROS_LEGACY = "com.xwiki.pro:xwiki-pro-macros";
 
-    private static final LocalDocumentReference APP_WEBHOME = new LocalDocumentReference(Arrays.asList("Confluence",
-        "Macros"), "WebHome");
+    private static final String PRO_MACROS_ID = "com.xwiki.pro:xwiki-pro-macros-ui";
+
+    private static final String PRO_MACROS_BRIDGES_ID = "com.xwiki.pro:xwiki-pro-macros-confluence-bridges-ui";
+
+    private static final List<String> PRO_MACROS_FEATURE_IDS =
+        List.of(PRO_MACROS_LEGACY, PRO_MACROS_BRIDGES_ID, PRO_MACROS_ID);
+
+    private static final LocalDocumentReference APP_WEBHOME =
+        new LocalDocumentReference(Arrays.asList("Confluence", "Macros"), "WebHome");
 
     private static final Set<String> DEFAULT_CATEGORIES = Collections.singleton(DEFAULT_CATEGORY_CONTENT);
+
+    private static final String VERSION_CONSTRAINT = "(,)";
 
     @Inject
     private Licensor licensor;
 
     @Inject
-    private DocumentAccessBridge accessBridge;
+    private LicensedExtensionManager extensionManager;
+
+    @Inject
+    private Provider<XWikiContext> xwikiContextProvider;
 
     @Inject
     private WikiDescriptorManager wikiDescriptorManager;
@@ -82,8 +99,8 @@ public abstract class AbstractProMacro<P> extends AbstractMacro<P>
      * @param contentDescriptor the content descriptor of the macro.
      * @param parametersBeanClass the class of the parameters bean of this class.
      */
-    protected AbstractProMacro(String name, String description,
-        ContentDescriptor contentDescriptor, Class<?> parametersBeanClass)
+    protected AbstractProMacro(String name, String description, ContentDescriptor contentDescriptor,
+        Class<?> parametersBeanClass)
     {
         super(name, description, contentDescriptor, parametersBeanClass);
         setDefaultCategories(DEFAULT_CATEGORIES);
@@ -116,22 +133,14 @@ public abstract class AbstractProMacro<P> extends AbstractMacro<P>
     public List<Block> execute(P parameters, String content, MacroTransformationContext context)
         throws MacroExecutionException
     {
-        if (licensor.hasLicensure(PRO_MACROS_EXT_ID) || licensor.hasLicensure(
-            new DocumentReference(APP_WEBHOME, new WikiReference(wikiDescriptorManager.getCurrentWikiId()))))
-        {
+
+        if (checkProMacrosPackageHasLicense() || checkProMacrosWebHomeHasLicense()) {
             return internalExecute(parameters, content, context);
         }
 
-        return Collections.singletonList(new MacroBlock(
-            "missingLicenseMessage",
-            Collections.singletonMap("extensionName", "proMacros.extension.name"),
-            null,
-            context.isInline())
-        );
+        return Collections.singletonList(new MacroBlock("missingLicenseMessage",
+            Collections.singletonMap("extensionName", "proMacros.extension.name"), null, context.isInline()));
     }
-
-    protected abstract List<Block> internalExecute(P parameters, String content, MacroTransformationContext context)
-        throws MacroExecutionException;
 
     /**
      * @return the wiki descriptor manager
@@ -140,6 +149,9 @@ public abstract class AbstractProMacro<P> extends AbstractMacro<P>
     {
         return this.wikiDescriptorManager;
     }
+
+    protected abstract List<Block> internalExecute(P parameters, String content, MacroTransformationContext context)
+        throws MacroExecutionException;
 
     protected boolean isEditMode(MacroTransformationContext context)
     {
@@ -157,6 +169,41 @@ public abstract class AbstractProMacro<P> extends AbstractMacro<P>
                 targetSyntaxType);
         }
         return editMode;
+    }
+
+    /**
+     * Verify if the instance has a valid license for any of the pro macros packages.
+     *
+     * @return true if the instance has a license for any of the pro macros packages, false otherwise.
+     */
+    private boolean checkProMacrosPackageHasLicense()
+    {
+        return PRO_MACROS_FEATURE_IDS.stream().map(
+            featureId -> extensionManager.getLicensedExtensions(new LicensedFeatureId(featureId, VERSION_CONSTRAINT))
+                .stream().findFirst().orElse(null)).filter(Objects::nonNull).anyMatch(licensor::hasLicensure);
+    }
+
+    /**
+     * Verify is there is a license covering the Pro Macros WebHome. Not all possible installations of the Pro Macros
+     * have a WebHome, so we first verify if the document is present because the licensor will return true for all
+     * null calls.
+     *
+     * @return true if there is a license covering the Pro Macros WebHome, false otherwise.
+     */
+    private boolean checkProMacrosWebHomeHasLicense()
+    {
+        DocumentReference macrosWebHome =
+            new DocumentReference(APP_WEBHOME, new WikiReference(wikiDescriptorManager.getCurrentWikiId()));
+        XWikiContext xwikiContext = xwikiContextProvider.get();
+        try {
+            XWikiDocument xWikiDocument = xwikiContext.getWiki().getDocument(macrosWebHome, xwikiContext);
+            if (xWikiDocument.isNew()) {
+                return false;
+            }
+            return licensor.hasLicensure(macrosWebHome);
+        } catch (XWikiException e) {
+            return false;
+        }
     }
 
     private boolean inEditModeFallBack()
